@@ -1,3 +1,5 @@
+[B]1.3.6[/B]
+- fix subtitle parsing
 [B]1.3.5[/B]
 - fix listing, thanks to @petzah
 [B]1.3.4[/B]
